# community/ledger-test-tool/suites/lf-v2.1/src/main/scala/com/daml/ledger/api/testtool/infrastructure/participant/SingleParticipantTestContext.scala
@@ -355,6 +355,7 @@ final class SingleParticipantTestContext private[participant] (
           )
         ),
         identityProviderId = "",
+        waitForAllocation = Some(true),
       )
     }
   }
