# community/ledger/ledger-json-api/src/test/resources/json-api-docs/openapi.yaml
@@ -2407,6 +2407,15 @@ components:
             If not set, assume the party is managed by the default identity provider.
             Optional
           type: string
+        waitForAllocation:
+          description: |-
+            When true, this RPC will attempt to wait for the party to be allocated on the synchronizer before returning.
+            When false, the allocation will happen asynchronously.
+            This is a best effort only as this synchronization is only possible for non decentralized parties (single hosting node).
+            For decentralized parties, this flag is ignored.
+            Defaults to true.
+            Optional
+          type: boolean
     AllocateExternalPartyResponse:
       title: AllocateExternalPartyResponse
       type: object
